# icebergToolchain

./: .gitignore  README.md
Generic/: CSVRow.cc  CSVRow.h  NodeDefinitions.cpp  NodeDefinitions.h  cloudManipulation.cpp  cloudManipulation.h  pcd2xyz.py
TUTORIAL/icebergCodeManual/: icebergManual.tex
ceres/: CMakeLists.txt  ResidualBlockDefinitions.h  buildandrun.sh  plotSolution.py  solveIceberg.cc  solveIcebergPosesOnly.cc  testceres.m
dataExtractionAndProcessing/: AeroQuaternion.py  Makefile  cleanData.py  deg2utm.h  example2.c  example3.c  extractWallData.c  getThatData.sh  mbsysCommandHist.txt  testunwrap.py  testutm.c  utm.py
featureExtraction/: CMakeLists.txt  cloudManipulation.cpp  cloudManipulation.h  extractFeaturesFromCleanedData.cc  saveSubmapAsPCD.cc  testHarness.cc
featureExtraction/gifs/: avconvCommands.txt
featureExtraction/python/: analyzeRangeImages.py  padImagesWithZeroes.py
featureExtraction/src/: CMakeLists.txt  ImageAccumulator.cpp  ImageAccumulator.h  cloudWarping.cc  correspondence_rejection_boundary.cppp  correspondence_rejection_boundary.hh  extractFeaturesFromCleanedData.cc  normalProjectionAsLighting.cc  rangeImagesFromData.cpp  saveSubmapAsPCD.cc  testHarness.cc
manualCorrespondence/src/: CMakeLists.txt  corrGUI.cpp  corrGUI.h  corrGUI.pro  corrGUI.ui  main.cpp
